meta2jucompiler.output
Terminals unused in grammar

    INC
    DEC
    ARROW


Grammar

    0 $accept: program $end

    1 program: CLASS IDENTIFIER LBRACE class_body RBRACE

    2 class_body: ε
    3           | class_body class_member

    4 class_member: field_decl
    5             | method_decl
    6             | SEMICOLON
    7             | error SEMICOLON

    8 field_decl: PUBLIC STATIC type field_ids SEMICOLON
    9           | PUBLIC STATIC error SEMICOLON

   10 field_ids: IDENTIFIER
   11          | field_ids COMMA IDENTIFIER

   12 method_decl: PUBLIC STATIC method_header method_body
   13            | PUBLIC STATIC method_header error SEMICOLON

   14 method_header: type IDENTIFIER LPAR RPAR
   15              | type IDENTIFIER LPAR formal_params RPAR
   16              | VOID IDENTIFIER LPAR RPAR
   17              | VOID IDENTIFIER LPAR formal_params RPAR

   18 formal_params: formal_param
   19              | STRING LSQ RSQ IDENTIFIER
   20              | STRING LSQ NATURAL RSQ IDENTIFIER
   21              | formal_params COMMA formal_param

   22 formal_param: type IDENTIFIER

   23 method_body: LBRACE method_body_items RBRACE

   24 method_body_items: ε
   25                  | method_body_items var_decl
   26                  | method_body_items stmt

   27 var_decl: type var_ids SEMICOLON
   28         | type var_ids error
   29         | type error SEMICOLON

   30 var_ids: IDENTIFIER
   31        | var_ids COMMA IDENTIFIER

   32 stmt: LBRACE stmt_list RBRACE
   33     | IF LPAR expr RPAR stmt
   34     | IF LPAR expr RPAR stmt ELSE stmt
   35     | IF LPAR error RPAR stmt
   36     | IF LPAR error RPAR stmt ELSE stmt
   37     | IF LPAR expr error stmt
   38     | IF LPAR expr error stmt ELSE stmt
   39     | WHILE LPAR expr RPAR stmt
   40     | WHILE LPAR error RPAR stmt
   41     | WHILE LPAR expr error stmt
   42     | RETURN expr SEMICOLON
   43     | RETURN SEMICOLON
   44     | RETURN error SEMICOLON
   45     | method_invocation SEMICOLON
   46     | method_invocation error
   47     | IDENTIFIER ASSIGN expr SEMICOLON
   48     | IDENTIFIER ASSIGN error SEMICOLON
   49     | parse_args SEMICOLON
   50     | PRINT LPAR expr RPAR SEMICOLON
   51     | PRINT LPAR STRLIT RPAR SEMICOLON
   52     | PRINT LPAR error RPAR SEMICOLON
   53     | RESERVED error SEMICOLON
   54     | SEMICOLON
   55     | error SEMICOLON

   56 stmt_list: ε
   57          | stmt_list stmt

   58 expr: assignment_expr

   59 assignment_expr: IDENTIFIER ASSIGN assignment_expr
   60                | or_expr

   61 or_expr: or_expr OR and_expr
   62        | and_expr

   63 and_expr: and_expr AND xor_expr
   64         | xor_expr

   65 xor_expr: xor_expr XOR equality_expr
   66         | equality_expr

   67 equality_expr: equality_expr EQ relational_expr
   68              | equality_expr NE relational_expr
   69              | relational_expr

   70 relational_expr: relational_expr LT shift_expr
   71                | relational_expr GT shift_expr
   72                | relational_expr LE shift_expr
   73                | relational_expr GE shift_expr
   74                | shift_expr

   75 shift_expr: shift_expr LSHIFT additive_expr
   76           | shift_expr RSHIFT additive_expr
   77           | additive_expr

   78 additive_expr: additive_expr PLUS multiplicative_expr
   79              | additive_expr MINUS multiplicative_expr
   80              | multiplicative_expr

   81 multiplicative_expr: multiplicative_expr STAR unary_expr
   82                    | multiplicative_expr DIV unary_expr
   83                    | multiplicative_expr MOD unary_expr
   84                    | unary_expr

   85 unary_expr: NOT unary_expr
   86           | MINUS unary_expr
   87           | PLUS unary_expr
   88           | primary_expr

   89 primary_expr: IDENTIFIER
   90             | IDENTIFIER DOTLENGTH
   91             | NATURAL
   92             | DECIMAL
   93             | BOOLLIT
   94             | method_invocation
   95             | parse_args
   96             | LPAR expr RPAR
   97             | LPAR error RPAR

   98 method_invocation: IDENTIFIER LPAR args_opt RPAR
   99                  | IDENTIFIER LPAR error RPAR

  100 args_opt: ε
  101         | expr_list

  102 expr_list: expr
  103          | expr_list COMMA expr
  104          | expr_list COMMA error

  105 parse_args: PARSEINT LPAR IDENTIFIER LSQ expr RSQ RPAR
  106           | PARSEINT LPAR error RPAR

  107 type: BOOL
  108     | INT
  109     | DOUBLE


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 9 13 28 29 35 36 37 38 40 41 44 46 48 52 53 55 97 99 104 106
    IDENTIFIER <lexeme> (258) 1 10 11 14 15 16 17 19 20 22 30 31 47 48 59 89 90 98 99 105
    NATURAL <lexeme> (259) 20 91
    DECIMAL <lexeme> (260) 92
    STRLIT <lexeme> (261) 51
    BOOLLIT <lexeme> (262) 93
    CLASS (263) 1
    PUBLIC (264) 8 9 12 13
    STATIC (265) 8 9 12 13
    RESERVED (266) 53
    BOOL (267) 107
    INT (268) 108
    DOUBLE (269) 109
    VOID (270) 16 17
    STRING (271) 19 20
    IF (272) 33 34 35 36 37 38
    ELSE (273) 34 36 38
    WHILE (274) 39 40 41
    RETURN (275) 42 43 44
    PRINT (276) 50 51 52
    PARSEINT (277) 105 106
    DOTLENGTH (278) 90
    INC (279)
    DEC (280)
    ARROW (281)
    ASSIGN (282) 47 48 59
    PLUS (283) 78 87
    MINUS (284) 79 86
    STAR (285) 81
    DIV (286) 82
    MOD (287) 83
    AND (288) 63
    OR (289) 61
    XOR (290) 65
    LSHIFT (291) 75
    RSHIFT (292) 76
    EQ (293) 67
    NE (294) 68
    LT (295) 70
    GT (296) 71
    LE (297) 72
    GE (298) 73
    NOT (299) 85
    LPAR (300) 14 15 16 17 33 34 35 36 37 38 39 40 41 50 51 52 96 97 98 99 105 106
    RPAR (301) 14 15 16 17 33 34 35 36 39 40 50 51 52 96 97 98 99 105 106
    LBRACE (302) 1 23 32
    RBRACE (303) 1 23 32
    LSQ (304) 19 20 105
    RSQ (305) 19 20 105
    SEMICOLON (306) 6 7 8 9 13 27 29 42 43 44 45 47 48 49 50 51 52 53 54 55
    COMMA (307) 11 21 31 103 104
    UPLUS (308)
    UMINUS (309)
    LOWER_THAN_ELSE (310)


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    program <node> (57)
        on left: 1
        on right: 0
    class_body <node> (58)
        on left: 2 3
        on right: 1 3
    class_member <node> (59)
        on left: 4 5 6 7
        on right: 3
    field_decl <node> (60)
        on left: 8 9
        on right: 4
    field_ids <node> (61)
        on left: 10 11
        on right: 8 11
    method_decl <node> (62)
        on left: 12 13
        on right: 5
    method_header <node> (63)
        on left: 14 15 16 17
        on right: 12 13
    formal_params <node> (64)
        on left: 18 19 20 21
        on right: 15 17 21
    formal_param <node> (65)
        on left: 22
        on right: 18 21
    method_body <node> (66)
        on left: 23
        on right: 12
    method_body_items <node> (67)
        on left: 24 25 26
        on right: 23 25 26
    var_decl <node> (68)
        on left: 27 28 29
        on right: 25
    var_ids <node> (69)
        on left: 30 31
        on right: 27 28 31
    stmt <node> (70)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 26 33 34 35 36 37 38 39 40 41 57
    stmt_list <node> (71)
        on left: 56 57
        on right: 32 57
    expr <node> (72)
        on left: 58
        on right: 33 34 37 38 39 41 42 47 50 96 102 103 105
    assignment_expr <node> (73)
        on left: 59 60
        on right: 58 59
    or_expr <node> (74)
        on left: 61 62
        on right: 60 61
    and_expr <node> (75)
        on left: 63 64
        on right: 61 62 63
    xor_expr <node> (76)
        on left: 65 66
        on right: 63 64 65
    equality_expr <node> (77)
        on left: 67 68 69
        on right: 65 66 67 68
    relational_expr <node> (78)
        on left: 70 71 72 73 74
        on right: 67 68 69 70 71 72 73
    shift_expr <node> (79)
        on left: 75 76 77
        on right: 70 71 72 73 74 75 76
    additive_expr <node> (80)
        on left: 78 79 80
        on right: 75 76 77 78 79
    multiplicative_expr <node> (81)
        on left: 81 82 83 84
        on right: 78 79 80 81 82 83
    unary_expr <node> (82)
        on left: 85 86 87 88
        on right: 81 82 83 84 85 86 87
    primary_expr <node> (83)
        on left: 89 90 91 92 93 94 95 96 97
        on right: 88
    method_invocation <node> (84)
        on left: 98 99
        on right: 45 46 94
    args_opt <node> (85)
        on left: 100 101
        on right: 98
    expr_list <node> (86)
        on left: 102 103 104
        on right: 101 103 104
    parse_args <node> (87)
        on left: 105 106
        on right: 49 95
    type <node> (88)
        on left: 107 108 109
        on right: 8 14 15 22 27 28 29


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: CLASS • IDENTIFIER LBRACE class_body RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: CLASS IDENTIFIER • LBRACE class_body RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: CLASS IDENTIFIER LBRACE • class_body RBRACE

    $default  reduce using rule 2 (class_body)

    class_body  go to state 6


State 6

    1 program: CLASS IDENTIFIER LBRACE class_body • RBRACE
    3 class_body: class_body • class_member

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    RBRACE     shift, and go to state 9
    SEMICOLON  shift, and go to state 10

    class_member  go to state 11
    field_decl    go to state 12
    method_decl   go to state 13


State 7

    7 class_member: error • SEMICOLON

    SEMICOLON  shift, and go to state 14


State 8

    8 field_decl: PUBLIC • STATIC type field_ids SEMICOLON
    9           | PUBLIC • STATIC error SEMICOLON
   12 method_decl: PUBLIC • STATIC method_header method_body
   13            | PUBLIC • STATIC method_header error SEMICOLON

    STATIC  shift, and go to state 15


State 9

    1 program: CLASS IDENTIFIER LBRACE class_body RBRACE •

    $default  reduce using rule 1 (program)


State 10

    6 class_member: SEMICOLON •

    $default  reduce using rule 6 (class_member)


State 11

    3 class_body: class_body class_member •

    $default  reduce using rule 3 (class_body)


State 12

    4 class_member: field_decl •

    $default  reduce using rule 4 (class_member)


State 13

    5 class_member: method_decl •

    $default  reduce using rule 5 (class_member)


State 14

    7 class_member: error SEMICOLON •

    $default  reduce using rule 7 (class_member)


State 15

    8 field_decl: PUBLIC STATIC • type field_ids SEMICOLON
    9           | PUBLIC STATIC • error SEMICOLON
   12 method_decl: PUBLIC STATIC • method_header method_body
   13            | PUBLIC STATIC • method_header error SEMICOLON

    error   shift, and go to state 16
    BOOL    shift, and go to state 17
    INT     shift, and go to state 18
    DOUBLE  shift, and go to state 19
    VOID    shift, and go to state 20

    method_header  go to state 21
    type           go to state 22


State 16

    9 field_decl: PUBLIC STATIC error • SEMICOLON

    SEMICOLON  shift, and go to state 23


State 17

  107 type: BOOL •

    $default  reduce using rule 107 (type)


State 18

  108 type: INT •

    $default  reduce using rule 108 (type)


State 19

  109 type: DOUBLE •

    $default  reduce using rule 109 (type)


State 20

   16 method_header: VOID • IDENTIFIER LPAR RPAR
   17              | VOID • IDENTIFIER LPAR formal_params RPAR

    IDENTIFIER  shift, and go to state 24


State 21

   12 method_decl: PUBLIC STATIC method_header • method_body
   13            | PUBLIC STATIC method_header • error SEMICOLON

    error   shift, and go to state 25
    LBRACE  shift, and go to state 26

    method_body  go to state 27


State 22

    8 field_decl: PUBLIC STATIC type • field_ids SEMICOLON
   14 method_header: type • IDENTIFIER LPAR RPAR
   15              | type • IDENTIFIER LPAR formal_params RPAR

    IDENTIFIER  shift, and go to state 28

    field_ids  go to state 29


State 23

    9 field_decl: PUBLIC STATIC error SEMICOLON •

    $default  reduce using rule 9 (field_decl)


State 24

   16 method_header: VOID IDENTIFIER • LPAR RPAR
   17              | VOID IDENTIFIER • LPAR formal_params RPAR

    LPAR  shift, and go to state 30


State 25

   13 method_decl: PUBLIC STATIC method_header error • SEMICOLON

    SEMICOLON  shift, and go to state 31


State 26

   23 method_body: LBRACE • method_body_items RBRACE

    $default  reduce using rule 24 (method_body_items)

    method_body_items  go to state 32


State 27

   12 method_decl: PUBLIC STATIC method_header method_body •

    $default  reduce using rule 12 (method_decl)


State 28

   10 field_ids: IDENTIFIER •
   14 method_header: type IDENTIFIER • LPAR RPAR
   15              | type IDENTIFIER • LPAR formal_params RPAR

    LPAR  shift, and go to state 33

    $default  reduce using rule 10 (field_ids)


State 29

    8 field_decl: PUBLIC STATIC type field_ids • SEMICOLON
   11 field_ids: field_ids • COMMA IDENTIFIER

    SEMICOLON  shift, and go to state 34
    COMMA      shift, and go to state 35


State 30

   16 method_header: VOID IDENTIFIER LPAR • RPAR
   17              | VOID IDENTIFIER LPAR • formal_params RPAR

    BOOL    shift, and go to state 17
    INT     shift, and go to state 18
    DOUBLE  shift, and go to state 19
    STRING  shift, and go to state 36
    RPAR    shift, and go to state 37

    formal_params  go to state 38
    formal_param   go to state 39
    type           go to state 40


State 31

   13 method_decl: PUBLIC STATIC method_header error SEMICOLON •

    $default  reduce using rule 13 (method_decl)


State 32

   23 method_body: LBRACE method_body_items • RBRACE
   25 method_body_items: method_body_items • var_decl
   26                  | method_body_items • stmt

    error       shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    RESERVED    shift, and go to state 43
    BOOL        shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    IF          shift, and go to state 44
    WHILE       shift, and go to state 45
    RETURN      shift, and go to state 46
    PRINT       shift, and go to state 47
    PARSEINT    shift, and go to state 48
    LBRACE      shift, and go to state 49
    RBRACE      shift, and go to state 50
    SEMICOLON   shift, and go to state 51

    var_decl           go to state 52
    stmt               go to state 53
    method_invocation  go to state 54
    parse_args         go to state 55
    type               go to state 56


State 33

   14 method_header: type IDENTIFIER LPAR • RPAR
   15              | type IDENTIFIER LPAR • formal_params RPAR

    BOOL    shift, and go to state 17
    INT     shift, and go to state 18
    DOUBLE  shift, and go to state 19
    STRING  shift, and go to state 36
    RPAR    shift, and go to state 57

    formal_params  go to state 58
    formal_param   go to state 39
    type           go to state 40


State 34

    8 field_decl: PUBLIC STATIC type field_ids SEMICOLON •

    $default  reduce using rule 8 (field_decl)


State 35

   11 field_ids: field_ids COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 59


State 36

   19 formal_params: STRING • LSQ RSQ IDENTIFIER
   20              | STRING • LSQ NATURAL RSQ IDENTIFIER

    LSQ  shift, and go to state 60


State 37

   16 method_header: VOID IDENTIFIER LPAR RPAR •

    $default  reduce using rule 16 (method_header)


State 38

   17 method_header: VOID IDENTIFIER LPAR formal_params • RPAR
   21 formal_params: formal_params • COMMA formal_param

    RPAR   shift, and go to state 61
    COMMA  shift, and go to state 62


State 39

   18 formal_params: formal_param •

    $default  reduce using rule 18 (formal_params)


State 40

   22 formal_param: type • IDENTIFIER

    IDENTIFIER  shift, and go to state 63


State 41

   55 stmt: error • SEMICOLON

    SEMICOLON  shift, and go to state 64


State 42

   47 stmt: IDENTIFIER • ASSIGN expr SEMICOLON
   48     | IDENTIFIER • ASSIGN error SEMICOLON
   98 method_invocation: IDENTIFIER • LPAR args_opt RPAR
   99                  | IDENTIFIER • LPAR error RPAR

    ASSIGN  shift, and go to state 65
    LPAR    shift, and go to state 66


State 43

   53 stmt: RESERVED • error SEMICOLON

    error  shift, and go to state 67


State 44

   33 stmt: IF • LPAR expr RPAR stmt
   34     | IF • LPAR expr RPAR stmt ELSE stmt
   35     | IF • LPAR error RPAR stmt
   36     | IF • LPAR error RPAR stmt ELSE stmt
   37     | IF • LPAR expr error stmt
   38     | IF • LPAR expr error stmt ELSE stmt

    LPAR  shift, and go to state 68


State 45

   39 stmt: WHILE • LPAR expr RPAR stmt
   40     | WHILE • LPAR error RPAR stmt
   41     | WHILE • LPAR expr error stmt

    LPAR  shift, and go to state 69


State 46

   42 stmt: RETURN • expr SEMICOLON
   43     | RETURN • SEMICOLON
   44     | RETURN • error SEMICOLON

    error       shift, and go to state 70
    IDENTIFIER  shift, and go to state 71
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78
    SEMICOLON   shift, and go to state 79

    expr                 go to state 80
    assignment_expr      go to state 81
    or_expr              go to state 82
    and_expr             go to state 83
    xor_expr             go to state 84
    equality_expr        go to state 85
    relational_expr      go to state 86
    shift_expr           go to state 87
    additive_expr        go to state 88
    multiplicative_expr  go to state 89
    unary_expr           go to state 90
    primary_expr         go to state 91
    method_invocation    go to state 92
    parse_args           go to state 93


State 47

   50 stmt: PRINT • LPAR expr RPAR SEMICOLON
   51     | PRINT • LPAR STRLIT RPAR SEMICOLON
   52     | PRINT • LPAR error RPAR SEMICOLON

    LPAR  shift, and go to state 94


State 48

  105 parse_args: PARSEINT • LPAR IDENTIFIER LSQ expr RSQ RPAR
  106           | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 95


State 49

   32 stmt: LBRACE • stmt_list RBRACE

    $default  reduce using rule 56 (stmt_list)

    stmt_list  go to state 96


State 50

   23 method_body: LBRACE method_body_items RBRACE •

    $default  reduce using rule 23 (method_body)


State 51

   54 stmt: SEMICOLON •

    $default  reduce using rule 54 (stmt)


State 52

   25 method_body_items: method_body_items var_decl •

    $default  reduce using rule 25 (method_body_items)


State 53

   26 method_body_items: method_body_items stmt •

    $default  reduce using rule 26 (method_body_items)


State 54

   45 stmt: method_invocation • SEMICOLON
   46     | method_invocation • error

    error      shift, and go to state 97
    SEMICOLON  shift, and go to state 98


State 55

   49 stmt: parse_args • SEMICOLON

    SEMICOLON  shift, and go to state 99


State 56

   27 var_decl: type • var_ids SEMICOLON
   28         | type • var_ids error
   29         | type • error SEMICOLON

    error       shift, and go to state 100
    IDENTIFIER  shift, and go to state 101

    var_ids  go to state 102


State 57

   14 method_header: type IDENTIFIER LPAR RPAR •

    $default  reduce using rule 14 (method_header)


State 58

   15 method_header: type IDENTIFIER LPAR formal_params • RPAR
   21 formal_params: formal_params • COMMA formal_param

    RPAR   shift, and go to state 103
    COMMA  shift, and go to state 62


State 59

   11 field_ids: field_ids COMMA IDENTIFIER •

    $default  reduce using rule 11 (field_ids)


State 60

   19 formal_params: STRING LSQ • RSQ IDENTIFIER
   20              | STRING LSQ • NATURAL RSQ IDENTIFIER

    NATURAL  shift, and go to state 104
    RSQ      shift, and go to state 105


State 61

   17 method_header: VOID IDENTIFIER LPAR formal_params RPAR •

    $default  reduce using rule 17 (method_header)


State 62

   21 formal_params: formal_params COMMA • formal_param

    BOOL    shift, and go to state 17
    INT     shift, and go to state 18
    DOUBLE  shift, and go to state 19

    formal_param  go to state 106
    type          go to state 40


State 63

   22 formal_param: type IDENTIFIER •

    $default  reduce using rule 22 (formal_param)


State 64

   55 stmt: error SEMICOLON •

    $default  reduce using rule 55 (stmt)


State 65

   47 stmt: IDENTIFIER ASSIGN • expr SEMICOLON
   48     | IDENTIFIER ASSIGN • error SEMICOLON

    error       shift, and go to state 107
    IDENTIFIER  shift, and go to state 71
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78

    expr                 go to state 108
    assignment_expr      go to state 81
    or_expr              go to state 82
    and_expr             go to state 83
    xor_expr             go to state 84
    equality_expr        go to state 85
    relational_expr      go to state 86
    shift_expr           go to state 87
    additive_expr        go to state 88
    multiplicative_expr  go to state 89
    unary_expr           go to state 90
    primary_expr         go to state 91
    method_invocation    go to state 92
    parse_args           go to state 93


State 66

   98 method_invocation: IDENTIFIER LPAR • args_opt RPAR
   99                  | IDENTIFIER LPAR • error RPAR

    error       shift, and go to state 109
    IDENTIFIER  shift, and go to state 71
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78

    RPAR  reduce using rule 100 (args_opt)

    expr                 go to state 110
    assignment_expr      go to state 81
    or_expr              go to state 82
    and_expr             go to state 83
    xor_expr             go to state 84
    equality_expr        go to state 85
    relational_expr      go to state 86
    shift_expr           go to state 87
    additive_expr        go to state 88
    multiplicative_expr  go to state 89
    unary_expr           go to state 90
    primary_expr         go to state 91
    method_invocation    go to state 92
    args_opt             go to state 111
    expr_list            go to state 112
    parse_args           go to state 93


State 67

   53 stmt: RESERVED error • SEMICOLON

    SEMICOLON  shift, and go to state 113


State 68

   33 stmt: IF LPAR • expr RPAR stmt
   34     | IF LPAR • expr RPAR stmt ELSE stmt
   35     | IF LPAR • error RPAR stmt
   36     | IF LPAR • error RPAR stmt ELSE stmt
   37     | IF LPAR • expr error stmt
   38     | IF LPAR • expr error stmt ELSE stmt

    error       shift, and go to state 114
    IDENTIFIER  shift, and go to state 71
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78

    expr                 go to state 115
    assignment_expr      go to state 81
    or_expr              go to state 82
    and_expr             go to state 83
    xor_expr             go to state 84
    equality_expr        go to state 85
    relational_expr      go to state 86
    shift_expr           go to state 87
    additive_expr        go to state 88
    multiplicative_expr  go to state 89
    unary_expr           go to state 90
    primary_expr         go to state 91
    method_invocation    go to state 92
    parse_args           go to state 93


State 69

   39 stmt: WHILE LPAR • expr RPAR stmt
   40     | WHILE LPAR • error RPAR stmt
   41     | WHILE LPAR • expr error stmt

    error       shift, and go to state 116
    IDENTIFIER  shift, and go to state 71
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78

    expr                 go to state 117
    assignment_expr      go to state 81
    or_expr              go to state 82
    and_expr             go to state 83
    xor_expr             go to state 84
    equality_expr        go to state 85
    relational_expr      go to state 86
    shift_expr           go to state 87
    additive_expr        go to state 88
    multiplicative_expr  go to state 89
    unary_expr           go to state 90
    primary_expr         go to state 91
    method_invocation    go to state 92
    parse_args           go to state 93


State 70

   44 stmt: RETURN error • SEMICOLON

    SEMICOLON  shift, and go to state 118


State 71

   59 assignment_expr: IDENTIFIER • ASSIGN assignment_expr
   89 primary_expr: IDENTIFIER •
   90             | IDENTIFIER • DOTLENGTH
   98 method_invocation: IDENTIFIER • LPAR args_opt RPAR
   99                  | IDENTIFIER • LPAR error RPAR

    DOTLENGTH  shift, and go to state 119
    ASSIGN     shift, and go to state 120
    LPAR       shift, and go to state 66

    $default  reduce using rule 89 (primary_expr)


State 72

   91 primary_expr: NATURAL •

    $default  reduce using rule 91 (primary_expr)


State 73

   92 primary_expr: DECIMAL •

    $default  reduce using rule 92 (primary_expr)


State 74

   93 primary_expr: BOOLLIT •

    $default  reduce using rule 93 (primary_expr)


State 75

   87 unary_expr: PLUS • unary_expr

    IDENTIFIER  shift, and go to state 121
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78

    unary_expr         go to state 122
    primary_expr       go to state 91
    method_invocation  go to state 92
    parse_args         go to state 93


State 76

   86 unary_expr: MINUS • unary_expr

    IDENTIFIER  shift, and go to state 121
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78

    unary_expr         go to state 123
    primary_expr       go to state 91
    method_invocation  go to state 92
    parse_args         go to state 93


State 77

   85 unary_expr: NOT • unary_expr

    IDENTIFIER  shift, and go to state 121
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78

    unary_expr         go to state 124
    primary_expr       go to state 91
    method_invocation  go to state 92
    parse_args         go to state 93


State 78

   96 primary_expr: LPAR • expr RPAR
   97             | LPAR • error RPAR

    error       shift, and go to state 125
    IDENTIFIER  shift, and go to state 71
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78

    expr                 go to state 126
    assignment_expr      go to state 81
    or_expr              go to state 82
    and_expr             go to state 83
    xor_expr             go to state 84
    equality_expr        go to state 85
    relational_expr      go to state 86
    shift_expr           go to state 87
    additive_expr        go to state 88
    multiplicative_expr  go to state 89
    unary_expr           go to state 90
    primary_expr         go to state 91
    method_invocation    go to state 92
    parse_args           go to state 93


State 79

   43 stmt: RETURN SEMICOLON •

    $default  reduce using rule 43 (stmt)


State 80

   42 stmt: RETURN expr • SEMICOLON

    SEMICOLON  shift, and go to state 127


State 81

   58 expr: assignment_expr •

    $default  reduce using rule 58 (expr)


State 82

   60 assignment_expr: or_expr •
   61 or_expr: or_expr • OR and_expr

    OR  shift, and go to state 128

    $default  reduce using rule 60 (assignment_expr)


State 83

   62 or_expr: and_expr •
   63 and_expr: and_expr • AND xor_expr

    AND  shift, and go to state 129

    $default  reduce using rule 62 (or_expr)


State 84

   64 and_expr: xor_expr •
   65 xor_expr: xor_expr • XOR equality_expr

    XOR  shift, and go to state 130

    $default  reduce using rule 64 (and_expr)


State 85

   66 xor_expr: equality_expr •
   67 equality_expr: equality_expr • EQ relational_expr
   68              | equality_expr • NE relational_expr

    EQ  shift, and go to state 131
    NE  shift, and go to state 132

    $default  reduce using rule 66 (xor_expr)


State 86

   69 equality_expr: relational_expr •
   70 relational_expr: relational_expr • LT shift_expr
   71                | relational_expr • GT shift_expr
   72                | relational_expr • LE shift_expr
   73                | relational_expr • GE shift_expr

    LT  shift, and go to state 133
    GT  shift, and go to state 134
    LE  shift, and go to state 135
    GE  shift, and go to state 136

    $default  reduce using rule 69 (equality_expr)


State 87

   74 relational_expr: shift_expr •
   75 shift_expr: shift_expr • LSHIFT additive_expr
   76           | shift_expr • RSHIFT additive_expr

    LSHIFT  shift, and go to state 137
    RSHIFT  shift, and go to state 138

    $default  reduce using rule 74 (relational_expr)


State 88

   77 shift_expr: additive_expr •
   78 additive_expr: additive_expr • PLUS multiplicative_expr
   79              | additive_expr • MINUS multiplicative_expr

    PLUS   shift, and go to state 139
    MINUS  shift, and go to state 140

    $default  reduce using rule 77 (shift_expr)


State 89

   80 additive_expr: multiplicative_expr •
   81 multiplicative_expr: multiplicative_expr • STAR unary_expr
   82                    | multiplicative_expr • DIV unary_expr
   83                    | multiplicative_expr • MOD unary_expr

    STAR  shift, and go to state 141
    DIV   shift, and go to state 142
    MOD   shift, and go to state 143

    $default  reduce using rule 80 (additive_expr)


State 90

   84 multiplicative_expr: unary_expr •

    $default  reduce using rule 84 (multiplicative_expr)


State 91

   88 unary_expr: primary_expr •

    $default  reduce using rule 88 (unary_expr)


State 92

   94 primary_expr: method_invocation •

    $default  reduce using rule 94 (primary_expr)


State 93

   95 primary_expr: parse_args •

    $default  reduce using rule 95 (primary_expr)


State 94

   50 stmt: PRINT LPAR • expr RPAR SEMICOLON
   51     | PRINT LPAR • STRLIT RPAR SEMICOLON
   52     | PRINT LPAR • error RPAR SEMICOLON

    error       shift, and go to state 144
    IDENTIFIER  shift, and go to state 71
    NATURAL     shift, and go to state 72
    DECIMAL     shift, and go to state 73
    STRLIT      shift, and go to state 145
    BOOLLIT     shift, and go to state 74
    PARSEINT    shift, and go to state 48
    PLUS        shift, and go to state 75
    MINUS       shift, and go to state 76
    NOT         shift, and go to state 77
    LPAR        shift, and go to state 78

    expr                 go to state 146
    assignment_expr      go to state 81
    or_expr              go to state 82
    and_expr             go to state 83
    xor_expr             go to state 84
    equality_expr        go to state 85
    relational_expr      go to state 86
    shift_expr           go to state 87
    additive_expr        go to state 88
    multiplicative_expr  go to state 89
    unary_expr           go to state 90
    primary_expr         go to state 91
    method_invocation    go to state 92
    parse_args           go to state 93


State 95

  105 parse_args: PARSEINT LPAR • IDENTIFIER LSQ expr RSQ RPAR
  106           | PARSEINT LPAR • error RPAR

    error       shift, and go to state 147
    IDENTIFIER  shift, and go to state 148


State 96

   32 stmt: LBRACE stmt_list • RBRACE
   57 stmt_list: stmt_list • stmt

    error       shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    RESERVED    shift, and go to state 43
    IF          shift, and go to state 44
    WHILE       shift, and go to state 45
    RETURN      shift, and go to state 46
    PRINT       shift, and go to state 47
    PARSEINT    shift, and go to state 48
    LBRACE      shift, and go to state 49
    RBRACE      shift, and go to state 149
    SEMICOLON   shift, and go to state 51

    stmt               go to state 150
    method_invocation  go to state 54
    parse_args         go to state 55


State 97

   46 stmt: method_invocation error •

    $default  reduce using rule 46 (stmt)


State 98

   45 stmt: method_invocation SEMICOLON •

    $default  reduce using rule 45 (stmt)


State 99

   49 stmt: parse_args SEMICOLON •

    $default  reduce using rule 49 (stmt)


State 100

   29 var_decl: type error • SEMICOLON

    SEMICOLON  shift, and go to state 151


State 101

   30 var_ids: IDENTIFIER •

    $default  reduce using rule 30 (var_ids)


State 102

   27 var_decl: type var_ids • SEMICOLON
   28         | type var_ids • error
   31 var_ids: var_ids • COMMA IDENTIFIER

    error      shift, and go to state 152
    SEMICOLON  shift, and go to state 153
    COMMA      shift, and go to state 154


State 103
